# Hey

./: .gitignore  README.md  README.zh-CN.md  build-profile.example.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: development-plan.md  real-device-vpn-test.md  roadmap.md  ui-redesign.md  v2rayng-feature-map.md  vpn-native-runtime-fix.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  README.md  napi_init.cpp
entry/src/main/cpp/prebuilt/arm64-v8a/: libsingbox.h  libxray.h
entry/src/main/cpp/types/libheyvpn/: Index.d.ts  oh-package.json5
entry/src/main/ets/components/: ActionListItem.ets  IconButton.ets  SectionHeader.ets  SelectionButton.ets  StatusTiles.ets
entry/src/main/ets/controlcardability/: ControlCardAbility.ets
entry/src/main/ets/core/: AssetUrls.ets  ClientCompatOptions.ets  ColorMode.ets  ConfigBackup.ets  ControlCard.ets  CoreInfo.ets  CoreSelection.ets  DeepLink.ets  DnsAddresses.ets  Encoding.ets  GeoAssets.ets  H2Transport.ets  I18n.ets  ImportedNodeNames.ets  JsonConfigNames.ets  KcpTransport.ets  LocalProxy.ets  ManualOutboundBuilder.ets  ManualOutboundEditState.ets  NodeDedupe.ets  PerAppProxy.ets  PrivateNetwork.ets  Profile.ets  ProxySharingWarning.ets  RoutingRules.ets  SettingsChange.ets  ShareLinkParser.ets  SingboxConfig.ets  SpeedNotification.ets  SubscriptionGroups.ets  SubscriptionSchedulerPlan.ets  SubscriptionSelection.ets  UpdateChecker.ets  V2rayNgOptions.ets  WebDav.ets  XrayConfig.ets  XrayOutbounds.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/mock/: Libheyvpn.mock.ets  mock-config.json5
entry/src/test/: LocalUnit.test.ets
libsingbox/: README.md  go.mod  go.sum  main.go  platform_stub.go  validate_test.go
scripts/: build_libsingbox_ohos.sh  build_libxray_ohos.sh  device_vpn_smoke_test.sh
(+79 files in other folders)
